--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "jeisoncrespo-react",
   "version": "0.1.0",
-  "homepage": "",
+  "homepage": "http://JeisonCrespo.github.io/JeisonCrespoPortafolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^3.2.3",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^6.0.2",
@@ -14,6 +15,8 @@
     "sweetalert2": "^9.17.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
